@@ -1,3 +1,7 @@
+2001-07-10  Ryan Yeske  <rcyeske@van.gobasis.com>
+
+	* nethack-api.el (nethack-api-ask-direction): remove setq
+
 2001-07-09  Ryan Yeske  <rcyeske@vcn.bc.ca>
 
 	* nethack.el (nethack-process-filter): rewrite to insert string
